spacing fixes

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -90,7 +90,7 @@
 
 #about {
   background-color: var(--bg-color);
-  padding: 15rem 0;
+  padding: 10rem 0;
 
   .text_about{
     padding-inline: 2.5rem;
@@ -111,21 +111,28 @@
     margin-top: 1rem;
   }
 
-  .button_about {
-      background-color: var(--tertiary-color);
-      color: var(--text-color);
-      font-family: "Montserrat", sans-serif;
-      font-size: 1rem;
-      padding: 0.8rem 1rem;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      
+  button {
+    background-color: var(--tertiary-color);
+    color: var(--text-color);
+    font-family: "Montserrat", sans-serif;
+    font-size: 1rem;
+    padding: 0.8rem 1rem;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-top: 1rem;
 
-    button:hover {
+    a{
+      text-decoration: none;
+      color: var(--text-color);
+    }
+    a:hover {
       color: var(--text-color-2);
       font-weight: bold;
       transition: 0.4s ease-in-out;
     }
   }
+
+
 }
+
